[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/images/circle1_n.png" type="Texture" id=1]
[ext_resource path="res://object/Circle.gd" type="Script" id=2]
[ext_resource path="res://object/Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/font64.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/audio/89.ogg" type="AudioStream" id=5]
[ext_resource path="res://object/glow.gdshader" type="Shader" id=6]

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 6 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/speed = 0.0
shader_param/radius = 0.29
shader_param/width = 0.14

[sub_resource type="CircleShape2D" id=8]
radius = 150.0

[sub_resource type="Animation" id=5]
resource_name = "Capture"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteEffect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteEffect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteEffect:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.560784 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteEffect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteEffect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteEffect:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpriteEffect:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SpriteEffect:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "implode"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Circle" type="Area2D" groups=["circle"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 7 )
texture = ExtResource( 1 )

[node name="SpriteEffect" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
material = SubResource( 7 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
shape = SubResource( 8 )

[node name="Pivot" type="Node2D" parent="."]
rotation = -0.0049803

[node name="OrbitPosition" type="Position2D" parent="Pivot"]
position = Vector2( 150.998, 0.752022 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Capture = SubResource( 5 )
anims/RESET = SubResource( 3 )
anims/implode = SubResource( 4 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.5
margin_top = -39.0
margin_right = 22.5
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="MoveTween" type="Tween" parent="."]

[node name="Pivot_Coin" type="Node2D" parent="."]

[node name="CoinPosition" type="Position2D" parent="Pivot_Coin"]
position = Vector2( 0, -154 )
rotation = -0.0049803

[node name="Coin" parent="Pivot_Coin" instance=ExtResource( 3 )]
position = Vector2( 0, -154 )

[connection signal="tween_completed" from="MoveTween" to="." method="set_tween"]
